sfdx/force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>Headless 360 reference demo object — backs the OrderStatusSkill with real records. Partner reskin: swap for your own order/case/shipment object.</description>
    <label>H360 Order</label>
    <pluralLabel>H360 Orders</pluralLabel>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>