sfdx/force-app/main/default/objects/Order__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Available Action</label>
    <type>Text</type>
    <length>120</length>
    <description>The one in-flow next action for this order, e.g. "Approve rebooking" or "View details".</description>
</CustomField>