sfdx/force-app/main/default/objects/Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <type>Text</type>
    <length>30</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
    <description>Business order number, e.g. OR-1001. External ID for upsert/lookup by the Skill.</description>
</CustomField>