sfdx/force-app/main/default/objects/Order__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Order Owner</label>
    <type>Text</type>
    <length>120</length>
    <description>Display name of the person who owns/handles the order (demo text field, not a User lookup).</description>
</CustomField>