sfdx/force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Order status surfaced by the reference Skill.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Processing</fullName><default>true</default><label>Processing</label></value>
            <value><fullName>Shipped</fullName><default>false</default><label>Shipped</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>Exception</fullName><default>false</default><label>Exception</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>