sfdx/force-app/main/default/objects/Order__c/fields/Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>Status_Summary__c</fullName>
    <label>Summary</label>
    <type>Text</type>
    <length>255</length>
    <description>Human-readable one-line summary of the order status.</description>
</CustomField>