sfdx/force-app/main/default/objects/Order__c/listViews/All_Orders.listView-meta.xml
<ListView>
    <fullName>All_Orders</fullName>
    <columns>Order_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Next_Action__c</columns>
    <columns>Status_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>